# UPS-SP

./: .gitignore
client/: .gitignore  pom.xml
client/src/main/java/: module-info.java
client/src/main/java/cz/zcu/kiv/ups/sp/: CardImageLoader.java  GameClient.java  GameController.java  HelloApplication.java  Launcher.java  Logger.java  MessageValidator.java  NetworkClient.java  ProtocolMessage.java  RoomInfo.java
client/src/main/resources/cz/zcu/kiv/ups/sp/: game-view.fxml  hello-view.fxml
server/: .gitignore  CMakeLists.txt  Makefile
server/src/: card.h  client.cpp  client.h  game.cpp  game.h  logger.cpp  logger.h  main.cpp  protocol.cpp  protocol.h  room.cpp  room.h  server.cpp  server.h
